--- a/data/home.html
+++ b/data/home.html
@@ -30,3 +30,13 @@
     </div>
 </body>
 </html>
+
+<div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+<a href="/calibrateForm">Calibrate</a>
