--- a/data/home.html
+++ b/data/home.html
@@ -6,7 +6,7 @@
         var ws = new WebSocket("ws://192.168.4.1/ws");
 
         ws.onopen = function() {
-            window.alert("Connected");
+            console.log("Websocket connected");
          };
 
         ws.onmessage = function (evt) {
@@ -15,8 +15,6 @@
             document.getElementById("Scale1").innerHTML = "Scale1: " + jsonMessage.Scale1 + " kg";
             document.getElementById("Scale2").innerHTML = "Scale2: " + jsonMessage.Scale2 + " kg";
             document.getElementById("Scale3").innerHTML = "Scale3: " + jsonMessage.Scale3 + " kg";
-
-            //document.getElementById("display").innerHTML  = "temperature: " + evt.data + " C";
         };
 
     </script>
@@ -30,13 +28,5 @@
     </div>
 </body>
 </html>
-
-<div class="dropdown">
-    <button class="dropbtn">Dropdown</button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div> 
+ 
 <a href="/calibrateForm">Calibrate</a>
