--- a/data/CalibrateForm.html
+++ b/data/CalibrateForm.html
@@ -189,7 +189,7 @@
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
                     console.log(xhr.responseText);
-                    document.getElementById("storeButton").innerHTML = "Button &#10003;"
+                    document.getElementById("storeButton").innerHTML = "Store &#10003;"
                 }
             };
             xhr.send();
